# service-skeleton

./: .clippy.toml  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: audit.yml  qa.yml  release.yml
service-skeleton/: Cargo.toml
service-skeleton/examples/: hello.rs  sensitive-hello.rs
service-skeleton/src/: config.rs  error.rs  lib.rs
service-skeleton/src/metric/: mod.rs  server.rs
service-skeleton/src/service/: builder.rs  mod.rs
service-skeleton/tests/: derive_service_config.rs  test_encrypted_config.key
service-skeleton_derive/: Cargo.toml  README.md
service-skeleton_derive/src/: lib.rs
service-skeleton_derive/tests/: ui.rs
service-skeleton_derive/tests/ui/: on_enum.rs  on_enum.stderr  on_tuple_struct.rs  on_tuple_struct.stderr  unknown_field_attr.rs  unknown_field_attr.stderr
sscrypt/: Cargo.toml  README.md
sscrypt/src/: error.rs  lib.rs  main.rs
