[package]
name = "service-skeleton"
description = "The bare bones of a service"
authors.workspace = true
version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["daemon", "service", "signal", "logging"]
categories = ["command-line-interface", "config", "development-tools::debugging"]
include = [
	"../README.md",
	"../LICENCE",
	"/src/**/*.rs",
]
readme = "../README.md"
edition.workspace = true

[dependencies]
heck.workspace = true
parking_lot.workspace = true
prometheus-client.workspace = true
service-skeleton_derive.workspace = true
thiserror.workspace = true
tiny_http.workspace = true
tracing.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
tracing-tree.workspace = true
