[package]
name = "service-skeleton_derive"
description = "Derive macro for service-skeleton"
authors = ["Matt Palmer <matt@hezmatt.org>"]
version = "0.0.0-git"
license = "GPL-3.0-only"
homepage = "https://github.com/mpalmer/service-skeleton"
repository = "https://github.com/mpalmer/service-skeleton"
keywords = ["daemon", "service", "signal", "logging"]
categories = ["command-line-interface", "config", "development-tools::debugging"]
include = [
	"/README.md",
	"/LICENCE",
	"/src/*.rs",
]
edition = "2021"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
darling = "0.20"
heck = "0.4"
proc-macro2 = "1.0"
syn = "2.0"
quote = "1.0"

[dev-dependencies]
trybuild = "1.0"
