[package]
name = "service-skeleton_derive"
description = "Derive macro for service-skeleton"
authors.workspace = true
version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["daemon", "service", "signal", "logging"]
categories = ["config"]
include = [
	"/README.md",
	"/LICENCE",
	"/src/*.rs",
]
edition.workspace = true
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
darling.workspace = true
heck.workspace = true
proc-macro2.workspace = true
syn.workspace = true
quote.workspace = true

[dev-dependencies]
trybuild.workspace = true
