[package]
name = "sscrypt"
description = "A CLI tool to encrypt service-skeleton secrets"
authors.workspace = true
version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["daemon", "service", "signal", "logging"]
categories = ["command-line-interface", "config", "development-tools::debugging"]
include = [
	"../LICENCE",
	"/README.md",
	"/src/**/*.rs",
]
readme = "README.md"
edition.workspace = true

[dependencies]
base64.workspace = true
clap.workspace = true
secrecy.workspace = true
strong-box.workspace = true
thiserror.workspace = true
thiserror-ext.workspace = true
